@@ -1,55 +1,53 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:tal="http://xml.zope.org/namespaces/tal"
-	xmlns:metal="http://xml.zope.org/namespaces/metal"
-	xmlns:i18n="http://xml.zope.org/namespaces/i18n"
-	metal:use-macro="here/main_template/macros/master"
-	i18n:domain="bika">
-<body>
+             xmlns:tal="http://xml.zope.org/namespaces/tal"
+             xmlns:metal="http://xml.zope.org/namespaces/metal"
+             xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+             metal:use-macro="here/main_template/macros/master"
+             i18n:domain="bika">
+  <body>
 
-<metal:content-title fill-slot="content-title">
-	<h1>
+    <metal:content-title fill-slot="content-title">
+      <h1>
         <img tal:condition="view/icon | nothing"
-            src="" tal:attributes="src view/icon"/>
+             src="" tal:attributes="src view/icon"/>
         <img tal:condition="view/getPriorityIcon | nothing"
              src="" tal:attributes="src view/getPriorityIcon"/>
         <span class="documentFirstHeading" tal:content="view/title"/>
-    </h1>
-</metal:content-title>
+      </h1>
+    </metal:content-title>
 
-<metal:content-description fill-slot="content-description">
-	<div class="documentDescription"
-		tal:content="view/description"
-		tal:condition="view/description"/>
-</metal:content-description>
+    <metal:content-description fill-slot="content-description">
+      <div class="documentDescription"
+                  tal:content="view/description"
+                  tal:condition="view/description"/>
+    </metal:content-description>
 
-<metal:content-core fill-slot="content-core">
-	<fieldset tal:define="portal context/@@plone_portal_state/portal;">
+    <metal:content-core fill-slot="content-core">
 
-		<tal:comment replace="nothing">
-		The position dropdown's value is not part of the bika_listing form.
-		The value is inserted into form values by worksheet.js
-		</tal:comment>
-		<div style="margin-bottom:1em">
-			<span tal:content="string:Insert into worksheet at position: " i18n:translate=""/>
-			<select id="position">
-				<tal:options repeat="position view/getAvailablePositions">
-					<option tal:attributes="value position" tal:content="position"/>
-				</tal:options>
-				<option value="new" i18n:translate="">New</option>
-			</select>
-		</div>
-		<span id="worksheet_add_duplicate_ars" tal:content="structure view/ARs/contents_table"/>
+      <fieldset tal:define="portal context/@@plone_portal_state/portal;">
+        <tal:comment replace="nothing">
+          The position dropdown's value is not part of the bika_listing form.
+          The value is inserted into form values by worksheet.js
+        </tal:comment>
+        <div style="margin-bottom:1em">
+          <span tal:content="string:Insert into worksheet at position: " i18n:translate=""/>
+          <select id="position">
+            <tal:options repeat="position view/getAvailablePositions">
+              <option tal:attributes="value position" tal:content="position"/>
+            </tal:options>
+            <option value="new" i18n:translate="">New</option>
+          </select>
+        </div>
+        <span id="worksheet_add_duplicate_ars" tal:content="structure view/ARs/contents_table"/>
+      </fieldset>
 
-	</fieldset>
+      <tal:remarks define="field python:context.Schema()['Remarks'];
+                           errors python:{};">
+        <p style="margin-top:2em;"/>
+        <metal:widget use-macro="python:context.widget('Remarks', mode='edit')" />
+      </tal:remarks>
 
-	<tal:remarks define="
-		field python:context.Schema()['Remarks'];
-		errors python:{};">
-		<p style="margin-top:2em;"/>
-		 <metal:widget use-macro="python:context.widget('Remarks', mode='edit')" />
-	</tal:remarks>
+    </metal:content-core>
 
-</metal:content-core>
-
-</body>
+  </body>
 </html>
