@@ -6,23 +6,22 @@
 # Some rights reserved. See LICENSE.txt, AUTHORS.txt.
 
 from operator import itemgetter
-from Products.Archetypes.config import REFERENCE_CATALOG
-from Products.CMFCore.utils import getToolByName
-from Products.CMFPlone.i18nl10n import ulocalized_time
 
+from bika.lims import api
 from bika.lims import bikaMessageFactory as _
 from bika.lims.browser.bika_listing import BikaListingView
 
 
 class AnalysisRequestsView(BikaListingView):
-    ## This table displays a list of ARs referenced by this worksheet.
-    ## used in add_duplicate view.
+    """This table displays a list of ARs referenced by this worksheet.
+    Used in add_duplicate view.
+    """
     def __init__(self, context, request):
         BikaListingView.__init__(self, context, request)
         self.context_actions = {}
         self.catalog = 'bika_analysis_catalog'
         self.contentFilter = {'portal_type': 'Analysis',
-                              'review_state':'impossible_state'}
+                              'review_state': 'impossible_state'}
         self.base_url = self.context.absolute_url()
         self.view_url = self.context.absolute_url() + "/add_duplicate"
         self.show_sort_column = False
@@ -37,27 +36,30 @@ class AnalysisRequestsView(BikaListingView):
             'Client': {'title': _('Client')},
             'created': {'title': _('Date Requested')},
         }
+
         self.review_states = [
-            {'id':'default',
-             'title': _('All'),
-             'contentFilter':{},
-             'transitions': [],
-             'columns':['Position', 'RequestID', 'Client', 'created'],
+            {
+                'id': 'default',
+                'title': _('All'),
+                'contentFilter': {},
+                'transitions': [],
+                'columns':['Position', 'RequestID', 'Client', 'created'],
             },
         ]
 
     def folderitems(self):
-        rc = getToolByName(self.context, REFERENCE_CATALOG)
         ars = {}
         for slot in self.context.getLayout():
             if slot['type'] != 'a':
                 continue
             ar = slot['container_uid']
-            if not ars.has_key(ar):
+            if ar not in ars:
                 ars[ar] = slot['position']
+
         items = []
         for ar, pos in ars.items():
-            ar = rc.lookupObject(ar)
+            pos = str(pos)
+            ar = api.get_object_by_uid(ar)
             # this folderitems doesn't subclass from the bika_listing.py
             # so we create items from scratch
             item = {
@@ -76,13 +78,13 @@ class AnalysisRequestsView(BikaListingView):
                 'replace': {},
                 'before': {},
                 'after': {},
-                'choices':{},
+                'choices': {},
                 'class': {},
                 'state_class': 'state-active',
                 'allow_edit': [],
                 'required': [],
             }
             items.append(item)
-        items = sorted(items, key = itemgetter('Position'))
+        items = sorted(items, key=itemgetter('Position'))
 
         return items
